# byosbackened

./: .deploy-trigger  .gitignore  AGENT_CONTEXT.md  BACKEND_API_INVENTORY.md  BILLING_CODE_REFERENCE.md  BILLING_SUMMARY.txt  HANDOFF.md  MASTER_STATE.md  PRODUCTION_TRUTH.md  PROGRESS.md  package-lock.json  package.json  skills-lock.json  test_suite.db  veklom_landing_reference.html  wrangler.toml
backend/: .env  .env.cloudflare  .env.co2routerengine  .env.coolify.ecobe  .env.coolify.veklom  .env.example  .env.hetzner  .env.production.example  .env.stripe  .env.veklom  .env.veklom.prod  .gitignore  AUDIT_REPORT.md  BLOG_PLAN.md  CHANGELOG.md  CLOUDFLARE_TUNNEL_SETUP.md  CONSISTENCY_TESTING.md  DEMO_SCRIPT.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_GO_LIVE.md  DEPLOY_STATUS.md  Dockerfile.license  EU_REPRESENTATIVE_REMINDER.md  EXECUTIVE_AUDIT_REPORT.md  HONEST_AUDIT_REPORT.md  HOSTING_PICK_FAIR_PRICE.md  MARKETING_AND_SEO_PLAYBOOK.md  PILOT_PRICING_INTERNAL.md  PRICING_MODEL.md  PRICING_STRATEGY.md  PRICING_TRUTH.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT.md  SALES_ONE_PAGER.md  STRATEGY.md  STRIPE_GO_LIVE.md  TROUBLESHOOTING_METRICS_IMPORT.md  (+54 more)
backend/acquisition/: README.md  _headers  _redirects  index.html  robots.txt  site.webmanifest  sitemap.xml  wrangler.toml
backend/config/: endpoint-catalog.draft.json
backend/core/: auth.py  config.py  license.py  logging.py  redis.py  redis_pool.py  security.py
backend/db/: session.py
backend/docs/: AGENT_ACCESS.md  BACKEND_CAPABILITY_UTILIZATION_AUDIT_2026-05-05.md  COMPETITIVE_ADVANTAGE.md  COMPLIANCE.md  COST_INTELLIGENCE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN_HETZNER.md  DOCKER_COMPOSE_PLAN.md  ENDPOINT_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_RESPONSE.md  INNOVATION.md  MIDDLEWARE_AUDIT.md  PLUGIN_SYSTEM.md  PRICING_AND_ENTITLEMENT_DRAFT.md  PRIVACY.md  PRODUCTION_READINESS_REVIEW.md  PRODUCTION_READY_SUMMARY.md  RELEASE_HANDOFF.md  RENDER_DEPLOYMENT.md  SECURITY.md  VEKLOM_OPERATING_DOCTRINE.md
backend/edge/: __init__.py
backend/herald/: __init__.py  (+2 more)
(+1975 files in other folders)
