[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byos-ai-backend"
version = "0.1.0"
description = "Portable BYOS AI Backend - No lock-in, swap hosts in a weekend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "boto3>=1.29.0",
    "httpx>=0.25.0",
    "celery>=5.3.0",
    "celery[redis]>=5.3.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "cryptography>=41.0.0",
    "prometheus-client>=0.19.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "stripe>=7.0.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "email-validator>=2.1.0",
    "sentry-sdk[fastapi]>=1.38.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
