[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "veklom"
version = "0.1.0"
description = "Official Python SDK for the Veklom governed inference platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Veklom", email = "dev@veklom.com" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://veklom.com"
Documentation = "https://docs.veklom.com"
Repository = "https://github.com/reprewindai-dev/veklom-py"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
